version 4.10

version 4.9

asynchronous close
asynchronous connect
some bug fixes, especially on EPOLL
improved cache code
removed unnecessary NAK (reduced loss retransmission)
receiver side error can unblock a blocked sender

version 4.8

fix a bug that may cause seg fault on concurrent close on the same socket
add epoll support
increase the listener's scalability to 100K concurrent connections
fix a bug that may cause accept/select to return positively when an accepted socket is closed immediately after accept returns
fix a bug that may cause connect to fail if the server closes listening socket immediately after accept returns
fix recvfile fstream write status bug (e.g., when disk is full, recvfile should handle properly now)

version 4.7a

fix timeout bug introduced in 4.7
initialize CHandShake

version 4.7

Fix several related bugs that can cause hang/memory leak/segmentation fault during cleanup()