@@ -1,5 +1,8 @@
 version 4.10
 
+fixed a bug that causes unnecessary connection timeout
+improved epoll UDT event handling
+
 version 4.9
 
 asynchronous close
